Prevent horizontal scroll on mobile by hiding x overflow on html

--- a/src/index.css
+++ b/src/index.css
@@ -37,6 +37,7 @@
 html {
   font-size: 16px;
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 body {
